--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,39 +1,4 @@
 {
-  "files.exclude": {
-    "*.DS_Store": true,
-    "*.DS_Store.*": true,
-    "*.babelrc": true,
-    "*.babelrc.*": true,
-    "*.editorconfig": true,
-    "*.editorconfig.*": true,
-    "*.eslintignore": true,
-    "*.eslintignore.*": true,
-    "*.eslintrc": true,
-    "*.eslintrc.*": true,
-    "*.git": true,
-    "*.git.*": true,
-    "*.gitignore": true,
-    "*.gitignore.*": true,
-    "*.postcssrc": true,
-    "*.postcssrc.*": true,
-    "*.vscode": true,
-    "*.vscode.*": true,
-    "*LICENSE": true,
-    "*LICENSE.*": true,
-    "*README": true,
-    "*README.*": true,
-    "*build": true,
-    "*build.*": true,
-    "*config": true,
-    "*config.*": true,
-    "*dist": true,
-    "*dist.*": true,
-    "*index": true,
-    "*index.*": true,
-    "*node_modules": true,
-    "*node_modules.*": true,
-    "*package": true,
-    "*package.*": true
-  },
+  "files.exclude": {},
   "editor.tabSize": 2
 }
