--- a/package.json
+++ b/package.json
@@ -55,10 +55,12 @@
   "dependencies": {
     "axios": "^0.16.1",
     "element-ui": "^2.2.1",
+    "papaparse": "^4.3.7",
     "vue": "^2.3.3",
     "vue-electron": "^1.0.6",
     "vue-router": "^2.5.3",
-    "vuex": "^2.3.1"
+    "vuex": "^2.3.1",
+    "xlsx": "^0.12.4"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
