--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,39 +1,4 @@
 {
-  "files.exclude": {
-    "*.DS_Store": true,
-    "*.DS_Store.*": true,
-    "*.babelrc": true,
-    "*.babelrc.*": true,
-    "*.electron-vue": true,
-    "*.electron-vue.*": true,
-    "*.eslintignore": true,
-    "*.eslintignore.*": true,
-    "*.eslintrc": true,
-    "*.eslintrc.*": true,
-    "*.git": true,
-    "*.git.*": true,
-    "*.gitignore": true,
-    "*.gitignore.*": true,
-    "*.travis": true,
-    "*.travis.*": true,
-    "*.vscode": true,
-    "*.vscode.*": true,
-    "*README": true,
-    "*README.*": true,
-    "*appveyor": true,
-    "*appveyor.*": true,
-    "*dist": true,
-    "*dist.*": true,
-    "*node_modules": true,
-    "*node_modules.*": true,
-    "*package": true,
-    "*package.*": true,
-    "*static": true,
-    "*static.*": true,
-    "src/*index": true,
-    "src/*index.*": true,
-    "src/*main": true,
-    "src/*main.*": true
-  },
+  "files.exclude": {},
   "editor.tabSize": 2
 }
